// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntryListItem molecule should match snapshot 1`] = `
<tr
  className="wrapper wrapper--color"
  onClick={[Function]}
>
  <td
    className="label"
  >
    label
    <span
      className="tagWrapper"
    >
      <span
        className="type"
      >
        type
      </span>
    </span>
    <span
      className="tagWrapper"
    >
      <span
        className="promiseStatus"
      >
        resolved
         40ms
      </span>
    </span>
  </td>
  <td
    className="timeWrapper"
  >
    <span
      className="time"
    >
      19:42:04.14
    </span>
  </td>
</tr>
`;

exports[`EntryListItem molecule should render event along with label when available 1`] = `
<tr
  className="wrapper wrapper--color"
  onClick={[Function]}
>
  <td
    className="label"
  >
    label
    <span
      className="event"
    >
       [
      event
      ]
    </span>
    <span
      className="tagWrapper"
    >
      <span
        className="type"
      >
        type
      </span>
    </span>
    <span
      className="tagWrapper"
    >
      <span
        className="promiseStatus promiseStatus--pending"
      >
        pending
      </span>
    </span>
  </td>
  <td
    className="timeWrapper"
  >
    <span
      className="time"
    >
      +00:24.02
    </span>
  </td>
</tr>
`;
